# SupplyChainTox

./: .gitignore  README.md  cli.py  codecov.yml  main.py  pyproject.toml
.github/workflows/: tests.yml
core/: main.py
tests/: test_main.py
