[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "SupplyChainTox"
version = "0.1.0"
description = "Minimal Textual splash screen and top bar."
requires-python = ">=3.11"
dependencies = [
    "textual>=8,<9",
]

[project.scripts]
SupplyChainTox = "main:main"

[tool.setuptools]
py-modules = ["main"]
